@@ -2,6 +2,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 == 01/25/2015 ==
 Trevius: Fixed an issue where Mercenaries were causing several DB queries per second while suspended.
+Trevius: Added Logs::Mercenaries to the new Logging System.  Logging of Mercenary information is off by default with the required SQL.
 
 == 01/24/2015 ==
 Uleat: Added equipment light source functionality to all mob derived classes (may still need tweaking...)
